<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/setReaderIDTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/set_reader_id_textview"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/readerIDEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setReaderIDTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/reader_id_edittext_hint"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/applySettingsButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/apply_settings_button"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/purple_500"/>

</RelativeLayout>