<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/addUpdateButton"
                android:scrollbars="none">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/name_textview"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/nameTextView"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameEditText"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/description_textview"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/descriptionTextView"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text=""
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/priceTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/descriptionEditText"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/price_textview"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/priceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/priceTextView"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/price_edittext"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/imageTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/priceEditText"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/image_textview"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_below="@+id/imageTextView"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/upload"
                        android:background="@drawable/border"/>

                </RelativeLayout>

            </ScrollView>

            <Button
                android:id="@+id/addUpdateButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/add"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@color/purple_500"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>