<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="225dp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="Product Name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextView"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="This is a description for product"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionTextView"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="5dp"
                android:text="USD 7.78"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/quantityLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/priceTextView"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/minusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:text="@string/minus_button"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:background="@color/purple_500"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/quantityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/quantity_button"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:background="@color/purple_500"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/plusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/plus_button"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:background="@color/purple_500"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/priceTextView"
                android:layout_marginTop="5dp"
                android:text="@string/add"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@color/purple_500"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>